force-app/main/default/objects/FlowPicklist__mdt/FlowPicklist__mdt.object-meta.xml
<CustomObject>
    <description>Contiene la definición de estructura (no los registros) que permiten aportar valores específicos a los picklist de los flujos de argumentarios. De esta forma el cambio de valores se puede realizar modificando este Custom Metadata Type en vez de hardcodeando el valor en el flujo.</description>
    <label>Picklist para flujos</label>
    <pluralLabel>Picklists para flujos</pluralLabel>
</CustomObject>