force-app/main/default/objects/FlowPicklist__mdt/fields/BBDDNoCualificado__c.field-meta.xml
<CustomField>
    <fullName>BBDDNoCualificado__c</fullName>
    <description>Valores de &apos;No Cualificado&apos; del campo result__c cuando el medio es BBDD</description>
    <label>BBDD/No Cualificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>No contento con ECI</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>No asegurable</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>