force-app/main/default/objects/FlowPicklist__mdt/fields/BlecisNoCualificado__c.field-meta.xml
<CustomField>
    <fullName>BlecisNoCualificado__c</fullName>
    <description>Valores &apos;No Cualificados&apos; para result__c cuando el campo medio es Blecis</description>
    <label>Blecis/No Cualificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>No contento con ECI</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Mercancía devuelta</fullName>
            </value>
            <value>
                <fullName>Cambio de Tomador</fullName>
            </value>
            <value>
                <fullName>Mercancía al extranjero o de empresa</fullName>
            </value>
            <value>
                <fullName>No compra por telefono</fullName>
                <isActive>false</isActive>
                <label>No compra por telefono</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>