force-app/main/default/objects/FlowPicklist__mdt/fields/DisplayNoCualificado__c.field-meta.xml
<CustomField>
    <fullName>DisplayNoCualificado__c</fullName>
    <description>Valores &apos;No Cualificado&apos; para el campo result__c cuando el ramo es Display</description>
    <label>Display/No Cualificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>No ha solicitado información</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
            </value>
            <value>
                <fullName>Otros productos</fullName>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>No asegurable</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>