force-app/main/default/objects/FlowPicklist__mdt/fields/EtapasGanadasOpp__c.field-meta.xml
<CustomField>
    <fullName>EtapasGanadasOpp__c</fullName>
    <description>Valores picklist para etapas de oportunidad ganadas</description>
    <label>EtapasGanadasOpp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratado</fullName>
                <default>true</default>
                <label>Contratado</label>
            </value>
            <value>
                <fullName>Suplemento - Aumento</fullName>
            </value>
            <value>
                <fullName>Suplemento - Disminución</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Tramitado CIA</fullName>
            </value>
            <value>
                <fullName>No procede información</fullName>
            </value>
            <value>
                <fullName>Duplicado Documentación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>