force-app/main/default/objects/FlowPicklist__mdt/fields/ImporteAceleradorAccidentes__c.field-meta.xml
<CustomField>
    <fullName>ImporteAceleradorAccidentes__c</fullName>
    <description>Importes de Acelerador ofrecido para Ramo Accidentes. Usado en flows donde se den Oportunidades por Ganadas (Básicos)</description>
    <label>ImporteAceleradorAccidentes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 % Prima Anual</fullName>
                <default>true</default>
                <label>15 % Prima Anual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>