force-app/main/default/objects/FlowPicklist__mdt/fields/ImporteAceleradorAutos__c.field-meta.xml
<CustomField>
    <fullName>ImporteAceleradorAutos__c</fullName>
    <description>Importes de Acelerador ofrecido para Ramo Autos/Motos. Usado en flows donde se den Oportunidades por Ganadas (Básicos)</description>
    <label>ImporteAceleradorAutos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25 €</fullName>
                <default>true</default>
                <label>25 €</label>
            </value>
            <value>
                <fullName>40 €</fullName>
            </value>
            <value>
                <fullName>60 €</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>