force-app/main/default/objects/FlowPicklist__mdt/fields/ImporteAceleradorDecesos__c.field-meta.xml
<CustomField>
    <fullName>ImporteAceleradorDecesos__c</fullName>
    <description>Importes de Acelerador ofrecido para Ramo Decesos. Usado en flows donde se den Oportunidades por Ganadas (Básicos)</description>
    <label>ImporteAceleradorDecesos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No tiene</fullName>
                <default>true</default>
                <label>No tiene</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>