force-app/main/default/objects/FlowPicklist__mdt/fields/ImporteAceleradorSalud__c.field-meta.xml
<CustomField>
    <fullName>ImporteAceleradorSalud__c</fullName>
    <description>Importes de Acelerador ofrecido para Ramo Salud. Usado en flows donde se den Oportunidades por Ganadas (Básicos)</description>
    <label>ImporteAceleradorSalud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60 €</fullName>
                <default>true</default>
                <label>60 €</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>