force-app/main/default/objects/FlowPicklist__mdt/fields/ImporteAceleradorVida__c.field-meta.xml
<CustomField>
    <fullName>ImporteAceleradorVida__c</fullName>
    <description>Importes de Acelerador ofrecido para Ramo Vida. Usado en flows donde se den Oportunidades por Ganadas (Básicos)</description>
    <label>ImporteAceleradorVida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25 % Prima Anual</fullName>
                <default>true</default>
                <label>25 % Prima Anual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>