force-app/main/default/objects/FlowPicklist__mdt/fields/MotivoPerdidaOppAgente__c.field-meta.xml
<CustomField>
    <fullName>MotivoPerdidaOppAgente__c</fullName>
    <description>Valores picklist para motivo de perdida de una oportunidad cuando el usuario es agente</description>
    <label>MotivoPerdidaOppAgente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prima elevada</fullName>
                <default>true</default>
                <label>Prima elevada</label>
            </value>
            <value>
                <fullName>Contraoferta de su Cía</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>No aceptación del riesgo</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Contrata directamente en compañía</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Solo gratuito</fullName>
            </value>
            <value>
                <fullName>Mejores coberturas otras Cías</fullName>
            </value>
            <value>
                <fullName>No venta por precio</fullName>
            </value>
            <value>
                <fullName>Cobertura por seguro Hogar</fullName>
            </value>
            <value>
                <fullName>Es un regalo</fullName>
            </value>
            <value>
                <fullName>No seguro Amortización</fullName>
            </value>
            <value>
                <fullName>No validación cliente / KO</fullName>
            </value>
            <value>
                <fullName>Denegado</fullName>
            </value>
            <value>
                <fullName>Contratado en delegación</fullName>
            </value>
            <value>
                <fullName>No interesa al cliente</fullName>
            </value>
            <value>
                <fullName>Número Máximo Intentos CTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>