force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificado_SalientesBlecis__c.field-meta.xml
<CustomField>
    <fullName>NoCualificado_SalientesBlecis__c</fullName>
    <description>Valores picklist para motivos de no cualificado cuando el medio es Blecis y llamada Salientes Blecis</description>
    <label>NoCualificado/SalientesBlecis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>No contento con ECI</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Mercancía devuelta</fullName>
            </value>
            <value>
                <fullName>Cambio de Tomador</fullName>
            </value>
            <value>
                <fullName>Mercancía al extranjero o de empresa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>