force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoBBDD__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoBBDD__c</fullName>
    <description>Valores picklist para motivos de no cualificado cuando el medio es BBDD o BBDD2 y llamada Salientes Básicos</description>
    <label>NoCualificado/BBDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>No contento con ECI</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>