force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoDefault__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoDefault__c</fullName>
    <description>Valores no cualificados por defecto</description>
    <label>NoCualificado/Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>Otros Productos</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
            <value>
                <fullName>No contento con ECI</fullName>
            </value>
            <value>
                <fullName>Mercancía devuelta</fullName>
            </value>
            <value>
                <fullName>Cambio de tomador</fullName>
            </value>
            <value>
                <fullName>Mercancía al extranjero o de empresa</fullName>
            </value>
            <value>
                <fullName>No asegurable</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>