force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoEntrantesBasicos__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoEntrantesBasicos__c</fullName>
    <description>Valores picklist para motivos de no cualificado para medio Manual o Telefono cuando la llamada es Entrantes Basicos</description>
    <label>NoCualificado/EntrantesBasicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
                <default>true</default>
                <label>Consulta NO venta - ATC</label>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>