force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoEntrantesBlecis__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoEntrantesBlecis__c</fullName>
    <description>Valores picklist para motivos de no cualificado cuando el medio es Blecis y llamada Entrantes Blecis</description>
    <label>NoCualificado/EntrantesBlecis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
                <default>true</default>
                <label>Consulta NO venta - ATC</label>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Mercancía devuelta</fullName>
            </value>
            <value>
                <fullName>Cambio de Tomador</fullName>
            </value>
            <value>
                <fullName>Mercancía al extranjero o de empresa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>