force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoEntrantesPrestamos__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoEntrantesPrestamos__c</fullName>
    <description>Valores picklist para motivos de no cualificado cuando el medio es Prestamos y llamada Entrantes Basicos</description>
    <label>NoCualificado/EntrantesPrestamos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No coinciden datos verificacion</fullName>
                <default>true</default>
                <label>No coinciden datos verificacion</label>
            </value>
            <value>
                <fullName>No dispone datos TECI</fullName>
            </value>
            <value>
                <fullName>No coinciden condiciones de la oferta</fullName>
            </value>
            <value>
                <fullName>Oferta fuera de fecha</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>