force-app/main/default/objects/FlowPicklist__mdt/fields/NoCualificadoSalientesPrestamos__c.field-meta.xml
<CustomField>
    <fullName>NoCualificadoSalientesPrestamos__c</fullName>
    <description>Valores picklist para motivos de no cualificado cuando el medio es Prestamos y llamada Salientes Básicos</description>
    <label>NoCualificado/SalientesPrestamos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No colabora</fullName>
                <default>true</default>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>Ya ha contratado</fullName>
            </value>
            <value>
                <fullName>No compra por teléfono</fullName>
            </value>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
            </value>
            <value>
                <fullName>Prefiere ir a Centro comercial</fullName>
            </value>
            <value>
                <fullName>Otros Productos</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>